#8 csv 파일 업로드 - csv파일 업로드 기능 구현

--- a/build.gradle
+++ b/build.gradle
@@ -29,13 +29,16 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	implementation group: 'com.querydsl', name: 'querydsl-core', version: '5.0.0'
-	implementation group: 'com.querydsl', name: 'querydsl-jpa', version: '5.0.0'
-	implementation group: 'com.querydsl', name: 'querydsl-apt', version: '5.0.0'
-	implementation group: 'com.querydsl', name: 'querydsl-collections', version: '5.0.0'
-	implementation group: 'com.querydsl', name: 'querydsl-sql-spring', version: '5.0.0'
 	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
 	implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+	// https://mvnrepository.com/artifact/org.apache.poi/poi
+	implementation group: 'org.apache.poi', name: 'poi', version: '5.2.3'
 
 
 
@@ -47,6 +50,6 @@ dependencies {
 	)
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
+//tasks.named('test') {
+//	useJUnitPlatform()
+//}
