#8 csv 파일 업로드 - 포지션 바인드에서 네임 바인드로 변경 - RegionVo.Data 생성하여 파싱

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,10 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.apache.poi/poi
 	implementation group: 'org.apache.poi', name: 'poi', version: '5.2.3'
 
+	// https://mvnrepository.com/artifact/com.opencsv/opencsv
+	implementation group: 'com.opencsv', name: 'opencsv', version: '5.8'
+
+
 
 
 	annotationProcessor(
